refactor: remove sorting and page request handling from SqlParameterBasedQuery