@@ -14,14 +14,10 @@
  */
 package org.eclipse.jnosql.extensions.sql.repository;
 
-import jakarta.data.Sort;
-import jakarta.data.page.PageRequest;
-import jakarta.data.repository.By;
 import org.eclipse.jnosql.communication.Condition;
 import org.eclipse.jnosql.communication.semistructured.CriteriaCondition;
 import org.eclipse.jnosql.communication.semistructured.Element;
 import org.eclipse.jnosql.communication.semistructured.SelectQuery;
-import org.eclipse.jnosql.mapping.core.NoSQLPage;
 import org.eclipse.jnosql.mapping.core.repository.ParamValue;
 import org.eclipse.jnosql.mapping.metadata.EntityMetadata;
 import org.eclipse.jnosql.mapping.metadata.FieldMetadata;
@@ -29,6 +25,7 @@ import org.eclipse.jnosql.mapping.semistructured.MappingQuery;
 
 import java.lang.reflect.Array;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.function.IntFunction;
@@ -41,40 +38,16 @@ enum SqlParameterBasedQuery {
 
 
     SelectQuery toQuery(Map<String, ParamValue> params,
-                                                                               List<Sort<?>> sorts,
                                                                                EntityMetadata entityMetadata) {
         List<CriteriaCondition> conditions = new ArrayList<>();
         for (Map.Entry<String, ParamValue> entry : params.entrySet()) {
-            conditions.add(createCondition(entityMetadata, entry));
+            conditions.add(createCondition(entry));
         }
-
-        List<Sort<?>> updateSorter = getSorts(sorts, entityMetadata);
-
         var condition = condition(conditions);
         var entity = entityMetadata.name();
-        return new MappingQuery(updateSorter, 0L, 0L, condition, entity, List.of());
+        return new MappingQuery(Collections.emptyList(), 0L, 0L, condition, entity, List.of());
     }
 
-SelectQuery toQueryNative(Map<String, Object> params,
-                                                                                     List<Sort<?>> sorts, PageRequest pageRequest,
-                                                                                     EntityMetadata entityMetadata) {
-        List<CriteriaCondition> conditions = new ArrayList<>();
-        for (Map.Entry<String, Object> entry : params.entrySet()) {
-            conditions.add(condition(entityMetadata, entry));
-        }
-
-        List<Sort<?>> updateSorter = getSorts(sorts, entityMetadata);
-
-        var condition = condition(conditions);
-        var entity = entityMetadata.name();
-        long limit = 0;
-        long skip = 0;
-        if (pageRequest != null) {
-            limit = pageRequest.size();
-            skip = NoSQLPage.skip(pageRequest);
-        }
-        return new MappingQuery(updateSorter, limit, skip, condition, entity, List.of());
-    }
 
     private CriteriaCondition condition(List<CriteriaCondition> conditions) {
         if (conditions.isEmpty()) {
@@ -85,20 +58,13 @@ SelectQuery toQueryNative(Map<String, Object> params,
         return CriteriaCondition.and(conditions.toArray(TO_ARRAY));
     }
 
-    private CriteriaCondition createCondition(EntityMetadata entityMetadata, Map.Entry<String, ParamValue> entry) {
-        var fieldName = resolveFieldName(entityMetadata, entry.getKey());
+    private CriteriaCondition createCondition(Map.Entry<String, ParamValue> entry) {
+        var fieldName = entry.getKey();
         var paramValue = entry.getValue();
         var condition = paramValue.condition();
         var value = extractConditionValue(paramValue.value(), condition);
         return paramValue.negate() ? CriteriaCondition.of(Element.of(fieldName, value), condition).negate():
                 CriteriaCondition.of(Element.of(fieldName, value), condition);
-    }
-
-    private String resolveFieldName(EntityMetadata metadata, String key) {
-        if (By.ID.equals(key)) {
-            return metadata.id().orElseThrow().name();
-        }
-        return metadata.fieldMapping(key).map(FieldMetadata::name).orElse(key);
     }
 
     private Object extractConditionValue(Object rawValue, Condition condition) {
@@ -140,14 +106,4 @@ SelectQuery toQueryNative(Map<String, Object> params,
         return CriteriaCondition.eq(name, value);
     }
 
-    private List<Sort<?>> getSorts(List<Sort<?>> sorts, EntityMetadata entityMetadata) {
-        List<Sort<?>> updateSorter = new ArrayList<>();
-        for (Sort<?> sort : sorts) {
-            var name = entityMetadata.fieldMapping(sort.property())
-                    .map(FieldMetadata::name)
-                    .orElse(sort.property());
-            updateSorter.add(sort.isAscending() ? Sort.asc(name) : Sort.desc(name));
-        }
-        return updateSorter;
-    }
 }
